<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/butter">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_new_task"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:scaleType="centerCrop"
        android:src="@drawable/calendar"
        android:contentDescription="@string/calendar_illustration" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Task Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#FF016A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_task_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:inputType="text"
                android:autofillHints="task name" />

            <!-- Date -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/date"
                android:textColor="#FF016A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="376dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editTextDate"
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/select_date"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/datePickerButton"
                    android:layout_width="36dp"
                    android:layout_marginTop="10sp"
                    android:layout_height="36dp"
                    android:src="@drawable/baseline_calendar_today_24"
                    android:contentDescription="@string/open_date_picker">
                </ImageButton>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/starting_time"
                android:textColor="#FF016A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editTextTime"
                    android:layout_width="316dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/select_time"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/timePickerButton"
                    android:layout_width="36sp"
                    android:layout_height="36sp"
                    android:src="@drawable/baseline_schedule_24"
                    android:layout_marginTop="10sp"
                    android:contentDescription="@string/open_time_picker">
                </ImageButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/pink"
                    android:src="@drawable/outline_alarm_24"
                    android:contentDescription="@string/reminder_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/remind_me"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/mySwitch"
                    android:layout_marginStart="170sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/category"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/life_button"
                    android:layout_width="90sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
                    android:background="#ffc0cb"
                    android:gravity="center"
                    android:text="@string/life"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/work_button"
                    android:layout_width="90sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
                    android:background="#FF016A"
                    android:gravity="center"
                    android:text="@string/work"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/study_button"
                    android:layout_width="90sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
                    android:background="#ff7f50"
                    android:gravity="center"
                    android:layout_marginStart="20sp"
                    android:text="@string/study"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/event_button"
                    android:layout_width="90sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
                    android:background="@color/butter"
                    android:gravity="center"
                    android:text="@string/event"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/get_started"
                android:gravity="center"
                android:text="@string/create_task"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>